--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "aa9b60e7-6b1c-4c29-a6e5-e43521412437"
 authors = ["Chad Scherrer <chad.scherrer@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+
 [compat]
 julia = "1"
 
