--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "FixedRNGs"
 uuid = "aa9b60e7-6b1c-4c29-a6e5-e43521412437"
 authors = ["Chad Scherrer <chad.scherrer@gmail.com> and contributors"]
-version = "1.0.0-DEV"
+version = "0.0.1"
 
 [deps]
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
