--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,3 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-FixedRNGs = "aa9b60e7-6b1c-4c29-a6e5-e43521412437"
+ConstantRNGs = "aa9b60e7-6b1c-4c29-a6e5-e43521412437"
